# emm

./: LICENSE  README.md  emm.cabal  stack.yaml
src/: EMM.hs  Equation.hs
