name:                emm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wfvining/emm#readme
license:             BSD3
license-file:        LICENSE
author:              Will Vining
maintainer:          wfvining@gmail.com
copyright:           2017 Will Vining
category:            AI
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , vector >= 0.12
                     , monad-mersenne-random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wfvining/emm
